--- a/quartz-gui/.settings/org.eclipse.wst.common.component
+++ b/quartz-gui/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,8 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
-        <wb-resource deploy-path="/" source-path="/webapp"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <property name="context-root" value="quartz-gui"/>
         <property name="java-output-path" value="/quartz-gui/target/classes"/>
     </wb-module>
